--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-agentcore": "^3.971.0",
+    "@aws-sdk/client-s3": "^3.971.0",
     "@cloudscape-design/board-components": "^3.0.141",
     "@cloudscape-design/chart-components": "^1.0.39",
     "@cloudscape-design/chat-components": "^1.0.89",
